# pd_server

./: .gitignore  pyproject.toml  serviceAccountKey.json
common/: models.py
config/: firebase.py  settings.py  urls.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_user_key_code_alter_user_first_name_and_more.py  0003_alter_user_first_name_alter_user_key_code_and_more.py
videos/: admin.py  models.py  urls.py  views.py
videos/migrations/: 0001_initial.py  0002_video_title_video_video_file.py
